--- a/android/app/src/main/res/layout/activity_my2.xml
+++ b/android/app/src/main/res/layout/activity_my2.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <com.sofit.onlinechatsdk.ChatView
@@ -10,4 +10,4 @@
         app:domain="kenddenshehere.az"
         app:autoLoad="true" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
