--- a/android/app/src/main/res/values/google_maps_api.xml
+++ b/android/app/src/main/res/values/google_maps_api.xml
@@ -10,7 +10,8 @@
     the demo app.
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-     AIzaSyC5b4ygf2aPikhkstqxTgme891YjorFKg4
+     AIzaSyC1XWcwMQ-WDLXUWZOTwQW7325Wb-OeysU
     </string>
     <!--   AIzaSyCV7zt11BkCiKvEXf5xF9smhP_4OmNgD14 -->
+    <!--  AIzaSyC5b4ygf2aPikhkstqxTgme891YjorFKg4 -->
 </resources>
